--- a/css/main.css
+++ b/css/main.css
@@ -81,18 +81,21 @@ a.desc-link:hover, a.active {
   left: 170px;
   top: 30px;
   width: 300px;
+  color: #000;
 }
 
 #step2-high-annotation {
   left: 200px;
   top: 90px;
   width: 300px;
+  color: crimson;
 }
 
 #step3-high-annotation {
   left: 340px;
   top: 180px;
   width: 300px;
+  color: darkorchid;
 }
 
 .axis path,
